@@ -2827,6 +2827,7 @@ then
 	HAVE_PYTHON=""
 	PYTHONINCLUDES=""
 	PYTHONDIR=""
+	PYTHONSITEDIR=""
 	PYTHONLIB=""
 	PYTHONVERSION=""
 
@@ -2943,6 +2944,13 @@ then
 		if ( test -n "$PYTHONINCLUDES" -a -n "$PYTHONDIR" )
 		then
 			HAVE_PYTHON="yes"
+
+			if ( test -d "$PYTHONDIR/dist-packages" )
+			then
+				PYTHONSITEDIR="dist-packages"
+			else
+				PYTHONSITEDIR="site-packages"
+			fi
 		fi
 	fi
 
@@ -2967,6 +2975,7 @@ then
 	HAVE_PYTHON3=""
 	PYTHON3INCLUDES=""
 	PYTHON3DIR=""
+	PYTHON3SITEDIR=""
 	PYTHON3LIB=""
 	PYTHON3VERSION=""
 
@@ -3083,6 +3092,13 @@ then
 		if ( test -n "$PYTHON3INCLUDES" -a -n "$PYTHON3DIR" )
 		then
 			HAVE_PYTHON3="yes"
+
+			if ( test -d "$PYTHON3DIR/dist-packages" )
+			then
+				PYTHON3SITEDIR="dist-packages"
+			else
+				PYTHON3SITEDIR="site-packages"
+			fi
 		fi
 	fi
 
@@ -3113,6 +3129,7 @@ AC_DEFUN([FW_PYTHON_DECIDE],
 		HAVE_PYTHON="$HAVE_PYTHON3"
 		PYTHONINCLUDES="$PYTHON3INCLUDES"
 		PYTHONDIR="$PYTHON3DIR"
+		PYTHONSITEDIR="$PYTHON3SITEDIR"
 		PYTHONLIB="$PYTHON3LIB"
 		IMPORTEXCEPTIONS=""
 		EXCEPTIONSSTANDARDERROR="Exception"
@@ -3121,6 +3138,7 @@ AC_DEFUN([FW_PYTHON_DECIDE],
 	AC_SUBST(HAVE_PYTHON)
 	AC_SUBST(PYTHONINCLUDES)
 	AC_SUBST(PYTHONDIR)
+	AC_SUBST(PYTHONSITEDIR)
 	AC_SUBST(PYTHONLIB)
 	AC_SUBST(IMPORTEXCEPTIONS)
 	AC_SUBST(EXCEPTIONSSTANDARDERROR)
