@@ -243,10 +243,11 @@ endif
 HAVE_PYTHON = @HAVE_PYTHON@
 PYTHONINCLUDES = @PYTHONFRAMEWORK@ @PYTHONINCLUDES@
 PYTHONDIR = @PYTHONDIR@
+PYTHONSITEDIR = @PYTHONSITEDIR@
 PYTHONUSERPATH = @PYTHONUSERPATH@
 PYTHONLIB = @PYTHONLIB@
 PYTHONCPPFLAGS = -DHAVE_CONFIG $(BASECPPFLAGS) $(PYTHONINCLUDES) -I$(top_builddir)/src/common -I$(top_builddir)/src/api/c++ $(RUDIMENTSINCLUDES)
-PYTHONLIBS = $(PYTHONLIB) -L$(top_builddir)/src/api/c++ -l$(SQLR)client $(RUDIMENTSLIBS) $(LIBDMALLOC) $(LIBEFENCE) -rpath $(PYTHONDIR)/site-packages/SQLRelay
+PYTHONLIBS = $(PYTHONLIB) -L$(top_builddir)/src/api/c++ -l$(SQLR)client $(RUDIMENTSLIBS) $(LIBDMALLOC) $(LIBEFENCE) -rpath $(PYTHONDIR)/$(PYTHONSITEDIR)/SQLRelay
 ifneq ($(strip $(libdir)),)
 ifeq ($(PYTHONUSERPATH),yes)
 PYTHONLIBS += -R $(libdir)
